--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,10 +22,10 @@ dependencies:
   rename: ^3.0.2
   flutter_launcher_icons: ^0.13.1
   flutter_splash_screen: ^3.0.0
-  fluentui_icons: ^1.0.0
   carousel_slider: ^4.2.1
   flutter_staggered_grid_view: ^0.4.0
-  
+  fluentui_system_icons: ^1.1.244
+ 
 dev_dependencies:
   flutter_test:
     sdk: flutter
